--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ h2 {
   width: 100%;
   padding: 0;
   margin: 0;
+  position: absolute;
 }
 
 .scene {
@@ -124,7 +125,7 @@ h2 {
   overflow: hidden;
 }
 
-.layer { position: absolute; }
+
 
 .layer div {
   -webkit-transform: translate3d(0,0,0);
